--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,17 @@
-CFLAGS ?= -O2
+CFLAGS ?= -O2 -march=native
 CFLAGS += -std=gnu99 -Wall
 SRC = $(wildcard *.c)
 HEADERS = $(wildcard *.h)
-LIBS = -lm -lpng
+LIBS = -lm
+STATIC = 0
+
+ifeq ($(STATIC), 1)
+	CFLAGS += -static $(shell pkg-config --static --cflags libpng)
+	LIBS += $(shell pkg-config --static --libs libpng)
+else
+	CFLAGS += $(shell pkg-config --cflags libpng)
+	LIBS += $(shell pkg-config --libs libpng)
+endif
 
 gravmap: $(SRC) $(HEADERS)
 	$(CC) $(CFLAGS) $(LDFLAGS) $(SRC) -o gravmap $(LIBS)
