--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 CFLAGS ?= -O2 -march=native
-CFLAGS += -std=gnu99 -Wall
+CFLAGS += -Wall
 SRC = $(wildcard *.c)
 HEADERS = $(wildcard *.h)
 LIBS = -lm
@@ -13,8 +13,27 @@ else
 	LIBS += $(shell pkg-config --libs libpng)
 endif
 
+EMCC = emcc
+EMCFLAGS = -O1 --pre-js pre.js \
+	-s ALLOW_MEMORY_GROWTH=1 \
+	-s DYNAMIC_EXECUTION=0 \
+	-s ENVIRONMENT=web \
+	-s EXPORTED_FUNCTIONS=[_pngtile,_tilesize,_tilefree] \
+	-s EXPORT_NAME=emscripten \
+	-s EXTRA_EXPORTED_RUNTIME_METHODS=[cwrap] \
+	-s MODULARIZE=1 \
+	-s TEXTDECODER=0 \
+	-s USE_LIBPNG=1
+
+all: gravmap gravmap.js
+
 gravmap: $(SRC) $(HEADERS)
 	$(CC) $(CFLAGS) $(LDFLAGS) $(SRC) -o gravmap $(LIBS)
 
+gravmap.js: $(SRC) $(HEADERS) pre.js
+	$(EMCC) $(EMCFLAGS) $(SRC) -o gravmap.js
+
 clean:
 	rm -f gravmap
+	rm -f gravmap.js
+	rm -f gravmap.wasm
